--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Snake Game - Classic</title>
+    <title>Snake Game - Mobile Ready</title>
     <style>
       body {
         background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
@@ -13,18 +13,22 @@
         flex-direction: column;
         align-items: center;
         margin: 0;
-        height: 100vh;
-        justify-content: center;
+        padding: 20px;
       }
 
       h1 {
-        margin-bottom: 10px;
+        margin: 10px 0;
       }
 
       #gameCanvas {
         background-color: #111;
         border: 3px solid #5aff15;
         border-radius: 15px;
+        max-width: 90vw;
+        max-height: 90vw;
+        width: 90vmin;
+        height: 90vmin;
+        touch-action: none;
       }
 
       #score {
@@ -44,10 +48,54 @@
         cursor: pointer;
         transition: background-color 0.3s ease;
         user-select: none;
+        margin-top: 10px;
       }
 
       #startBtn:hover {
         background-color: #3ebb10;
+      }
+
+      .controls {
+        display: grid;
+        grid-template-areas:
+          ". up ."
+          "left down right";
+        gap: 10px;
+        margin-top: 20px;
+      }
+
+      .btn {
+        padding: 10px;
+        background-color: #5aff15;
+        border: none;
+        border-radius: 50%;
+        color: #111;
+        font-weight: bold;
+        font-size: 18px;
+        width: 60px;
+        height: 60px;
+        touch-action: manipulation;
+        user-select: none;
+      }
+
+      .btn:active {
+        background-color: #3ebb10;
+      }
+
+      .up {
+        grid-area: up;
+      }
+
+      .down {
+        grid-area: down;
+      }
+
+      .left {
+        grid-area: left;
+      }
+
+      .right {
+        grid-area: right;
       }
     </style>
   </head>
@@ -57,14 +105,21 @@
     <canvas id="gameCanvas" width="400" height="400"></canvas>
     <button id="startBtn">Start Game</button>
 
+    <div class="controls">
+      <button class="btn up">↑</button>
+      <button class="btn down">↓</button>
+      <button class="btn left">←</button>
+      <button class="btn right">→</button>
+    </div>
+
     <script>
       const canvas = document.getElementById("gameCanvas");
       const ctx = canvas.getContext("2d");
       const scoreDisplay = document.getElementById("score");
       const startBtn = document.getElementById("startBtn");
 
-      const gridSize = 20; // size of each square in the grid
-      const tileCount = canvas.width / gridSize;
+      const gridSize = 20;
+      const tileCount = Math.floor(canvas.width / gridSize);
 
       let snake = [];
       let direction = { x: 0, y: 0 };
@@ -86,14 +141,11 @@
       }
 
       function placeFood() {
-        // Random position but not on snake
-        let validPosition = false;
-        while (!validPosition) {
+        let valid = false;
+        while (!valid) {
           food.x = Math.floor(Math.random() * tileCount);
           food.y = Math.floor(Math.random() * tileCount);
-          validPosition = !snake.some(
-            (segment) => segment.x === food.x && segment.y === food.y
-          );
+          valid = !snake.some((s) => s.x === food.x && s.y === food.y);
         }
       }
 
@@ -103,55 +155,37 @@
       }
 
       function drawGame() {
-        // Clear canvas
         ctx.fillStyle = "#111";
         ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-        // Draw food
         drawRect(food.x, food.y, "#ff4757");
-
-        // Draw snake
-        snake.forEach((segment, idx) => {
-          drawRect(segment.x, segment.y, idx === 0 ? "#70ff70" : "#00cc44");
-        });
+        snake.forEach((s, i) =>
+          drawRect(s.x, s.y, i === 0 ? "#70ff70" : "#00cc44")
+        );
       }
 
       function update() {
-        // Calculate new head position
         const head = {
           x: snake[0].x + direction.x,
           y: snake[0].y + direction.y,
         };
 
-        // Check wall collision
         if (
           head.x < 0 ||
           head.x >= tileCount ||
           head.y < 0 ||
-          head.y >= tileCount
+          head.y >= tileCount ||
+          snake.some((s) => s.x === head.x && s.y === head.y)
         ) {
-          gameOver();
-          return;
+          return gameOver();
         }
 
-        // Check self collision
-        if (
-          snake.some((segment) => segment.x === head.x && segment.y === head.y)
-        ) {
-          gameOver();
-          return;
-        }
-
-        // Add new head
         snake.unshift(head);
 
-        // Check if food eaten
         if (head.x === food.x && head.y === food.y) {
           score++;
           scoreDisplay.textContent = `Score: ${score}`;
           placeFood();
         } else {
-          // Remove tail
           snake.pop();
         }
 
@@ -165,39 +199,40 @@
         startBtn.disabled = false;
       }
 
-      function changeDirection(event) {
-        const key = event.key;
+      function changeDirection(key) {
         if (!gameRunning) return;
+        const { x, y } = direction;
 
-        const goingUp = direction.y === -1;
-        const goingDown = direction.y === 1;
-        const goingLeft = direction.x === -1;
-        const goingRight = direction.x === 1;
-
-        if (key === "ArrowUp" && !goingDown) {
-          direction = { x: 0, y: -1 };
-        } else if (key === "ArrowDown" && !goingUp) {
-          direction = { x: 0, y: 1 };
-        } else if (key === "ArrowLeft" && !goingRight) {
-          direction = { x: -1, y: 0 };
-        } else if (key === "ArrowRight" && !goingLeft) {
-          direction = { x: 1, y: 0 };
-        }
+        if (key === "ArrowUp" && y !== 1) direction = { x: 0, y: -1 };
+        if (key === "ArrowDown" && y !== -1) direction = { x: 0, y: 1 };
+        if (key === "ArrowLeft" && x !== 1) direction = { x: -1, y: 0 };
+        if (key === "ArrowRight" && x !== -1) direction = { x: 1, y: 0 };
       }
 
       function startGame() {
         resetGame();
         startBtn.disabled = true;
         gameRunning = true;
-
-        // Draw initial frame
         drawGame();
-
         gameInterval = setInterval(update, 120);
       }
 
-      window.addEventListener("keydown", changeDirection);
+      window.addEventListener("keydown", (e) => changeDirection(e.key));
       startBtn.addEventListener("click", startGame);
+
+      // Touch buttons
+      document
+        .querySelector(".up")
+        .addEventListener("click", () => changeDirection("ArrowUp"));
+      document
+        .querySelector(".down")
+        .addEventListener("click", () => changeDirection("ArrowDown"));
+      document
+        .querySelector(".left")
+        .addEventListener("click", () => changeDirection("ArrowLeft"));
+      document
+        .querySelector(".right")
+        .addEventListener("click", () => changeDirection("ArrowRight"));
     </script>
   </body>
 </html>
